--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/NewMap.NewMap
+EditorStartupMap=/Game/Maps/NewMap_TestLevel.NewMap_TestLevel
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -10,9 +10,9 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/NewMap.NewMap
+GameDefaultMap=/Game/Maps/NewMap_TestLevel.NewMap_TestLevel
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Developers/zack/Content/BaseGame/GM_Horror.GM_Horror_C
+GlobalDefaultGameMode=/Game/BaseGame/GM_Horror1.GM_Horror1_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
