--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Developers/zack/Content/BaseGame/GI_Horror.GI_Horror_C
 GameDefaultMap=/Game/Maps/NewMap.NewMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Developers/zack/Content/BaseGame/GM_Horror.GM_Horror_C
