Added UI, including start screen and load screen (Will continue working on it tomorrow)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/BaseGame/GI_HorrorFinal.GI_HorrorFinal_C
-GameDefaultMap=/Game/Maps/L_Brandon1.L_Brandon1
+GameDefaultMap=/Game/Maps/L_TitleScreen.L_TitleScreen
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/BaseGame/GM_HorrorFinal.GM_HorrorFinal_C
 GlobalDefaultServerGameMode=None
