No more lens flares

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/NewMap_TestLevel.NewMap_TestLevel
+EditorStartupMap=/Game/Maps/L_GameMap.L_GameMap
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
