enemy now chases player into hallways, moved gun to front desk

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -104,3 +104,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+
