--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,7 +16,7 @@ GlobalDefaultGameMode=/Game/BaseGame/GM_HorrorFinal.GM_HorrorFinal_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
-r.AllowStaticLighting=False
+r.AllowStaticLighting=True
 
 r.GenerateMeshDistanceFields=True
 
@@ -37,6 +37,8 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.SkinCache.SceneMemoryLimitInMB=400.000000
 r.DefaultFeature.AutoExposure=False
+r.VirtualTextures=True
+r.VirtualTexturedLightmaps=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
