--- a/Project_Moonbase.uproject
+++ b/Project_Moonbase.uproject
@@ -26,6 +26,10 @@
 		{
 			"Name": "ScriptableToolsFramework",
 			"Enabled": true
+		},
+		{
+			"Name": "GPULightmass",
+			"Enabled": true
 		}
 	]
 }
